--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -4,6 +4,7 @@ import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs
 import { withInfo } from 'storybook-addon-vue-info'
 import ChecIcon from '../../components/ChecIcon.vue';
 import icons from '../../lib/icons';
+import BaseTooltip from '../../directives/BaseTooltip.vue'
 
 <Meta title="Components/Icon" component={ChecIcon} />
 
@@ -57,10 +58,13 @@ Todo list
         icons: {
           default: icons,
         },
+        color: {
+          default: select('Color', ['text-gray-500', 'text-white'], 'text-gray-500')
+        },
       },
       template: `
         <div class="py-16 flex justify-center bg-gray-400">
-          <chec-icon v-for="icon in Object.keys(icons)" :icon="icon" class="w-3 h-3" :class="color" />
+          <chec-icon v-for="icon in Object.keys(icons)" :icon="icon" class="w-3 h-3" :class="color" v-tooltip.top="{text: icon}"/>
         </div>`,
     }}
   </Story>
