--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -4,7 +4,6 @@ import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs
 import { withInfo } from 'storybook-addon-vue-info'
 import ChecIcon from '../../components/ChecIcon.vue';
 import icons from '../../lib/icons';
-import BaseTooltip from '../../directives/BaseTooltip.vue'
 
 <Meta title="Components/Icon" component={ChecIcon} />
 
@@ -64,7 +63,7 @@ Todo list
       },
       template: `
         <div class="py-16 flex justify-center bg-gray-400">
-          <chec-icon v-for="(_, icon) in icons" :icon="icon" class="w-3 h-3" :class="color" v-tooltip.top="{text: icon}"/>
+          <chec-icon v-for="(_, icon) in icons" :icon="icon" class="w-3 h-3" :class="color" v-tooltip.top="icon"/>
         </div>`,
     }}
   </Story>
