--- a/src/stories/components/ChecCheckbox.stories.mdx
+++ b/src/stories/components/ChecCheckbox.stories.mdx
@@ -38,6 +38,7 @@ import ChecCheckbox from '../../components/ChecCheckbox.vue';
         <div class="py-16 flex justify-center bg-gray-100">
         <ul>
           <ChecCheckbox
+            class="p-3"
             v-model="checked"
             name="apple"
             :label="label"
@@ -45,6 +46,7 @@ import ChecCheckbox from '../../components/ChecCheckbox.vue';
             :disabled="disabled"
           />
           <ChecCheckbox
+            class="p-3"
             v-model="checked"
             name="orange"
             label="Orange"
@@ -52,6 +54,7 @@ import ChecCheckbox from '../../components/ChecCheckbox.vue';
             :disabled="disabled"
           />
           <ChecCheckbox
+            class="p-3"
             v-model="checked"
             name="pear"
             label="Pear"
@@ -59,6 +62,7 @@ import ChecCheckbox from '../../components/ChecCheckbox.vue';
             :disabled="disabled"
           />
           <ChecCheckbox
+            class="p-3"
             v-model="checked"
             name="disabled"
             label="Disabled"
