Allow crumbs to be wrapped by <router-links>, add route to story to better demonstrate links

--- a/src/stories/components/BaseBreadCrumbs.stories.mdx
+++ b/src/stories/components/BaseBreadCrumbs.stories.mdx
@@ -15,7 +15,7 @@ Set to iterate breadcrumbs based on `this.$route.matched`; works well with  a gl
 
 <Preview>
   <Story name="Default" decorators={[StoryRouter({}, {
-    initialEntry: "/settings/developers",
+    initialEntry: "/settings/developers/api-keys",
     routes: [
       {
         path: '/',
@@ -27,7 +27,13 @@ Set to iterate breadcrumbs based on `this.$route.matched`; works well with  a gl
             children: [
               {
                 path: 'developers',
-                meta: {breadcrumb: 'Developers'}
+                meta: {breadcrumb: 'Developers'},
+                children: [
+                  {
+                    path: 'api-keys',
+                    meta: {breadcrumb: 'API Keys'}
+                  }
+                ]
               }
             ]
           }
