--- a/src/stories/components/ChecCheckbox.stories.mdx
+++ b/src/stories/components/ChecCheckbox.stories.mdx
@@ -63,11 +63,18 @@ import ChecCheckbox from '../../components/ChecCheckbox.vue';
           />
           <ChecCheckbox
             class="p-3"
-            v-model="checked"
             name="disabled"
             label="Disabled"
             value="disabled"
             disabled="disabled"
+          />
+          <ChecCheckbox
+            class="p-3"
+            v-model="indeterminate"
+            name="indeterminate"
+            label="Indeterminate"
+            value="indeterminate"
+            indeterminate="indeterminate"
           />
           <ul>
         </div>`,
