code refactoring on checkbox component according to pr comments

--- a/src/stories/components/ChecCheckbox.stories.mdx
+++ b/src/stories/components/ChecCheckbox.stories.mdx
@@ -36,47 +36,48 @@ import ChecCheckbox from '../../components/ChecCheckbox.vue';
       },
       template: `
         <div class="py-16 flex justify-center bg-gray-100">
-        <ul>
-          <ChecCheckbox
-            class="p-3"
-            v-model="checked"
-            name="apple"
-            :label="label"
-            value="apple"
-            :disabled="disabled"
-          />
-          <ChecCheckbox
-            class="p-3"
-            v-model="checked"
-            name="orange"
-            label="Orange"
-            value="orange"
-            :disabled="disabled"
-          />
-          <ChecCheckbox
-            class="p-3"
-            v-model="checked"
-            name="pear"
-            label="Pear"
-            value="pear"
-            :disabled="disabled"
-          />
-          <ChecCheckbox
-            class="p-3"
-            name="disabled"
-            label="Disabled"
-            value="disabled"
-            disabled="disabled"
-          />
-          <ChecCheckbox
-            class="p-3"
-            name="indeterminate"
-            label="Indeterminate"
-            value="indeterminate"
-            :disabled="disabled"
-            indeterminate="indeterminate"
-          />
           <ul>
+           <div class="flex justify-center font-lato">Items Checked: {{checked}}</div>
+            <ChecCheckbox
+              class="p-3"
+              name="apple"
+              :label="label"
+              value="apple"
+              v-model="checked"
+              :disabled="disabled"
+            />
+            <ChecCheckbox
+            v-model="checked"
+              class="p-3"
+              name="orange"
+              label="Orange"
+              value="orange"
+              :disabled="disabled"
+            />
+            <ChecCheckbox
+            v-model="checked"
+              class="p-3"
+              name="pear"
+              label="Pear"
+              value="pear"
+              :disabled="disabled"
+            />
+            <ChecCheckbox
+              class="p-3"
+              name="disabled"
+              label="Disabled"
+              value="disabled"
+              disabled="disabled"
+            />
+            <ChecCheckbox
+              class="p-3"
+              name="indeterminate"
+              label="Indeterminate"
+              value="indeterminate"
+              :disabled="disabled"
+              indeterminate="indeterminate"
+            />
+          </ul>
         </div>`,
     }}
   </Story>
