removed font-lato from component, removed 'on' value

--- a/src/stories/components/ChecCheckbox.stories.mdx
+++ b/src/stories/components/ChecCheckbox.stories.mdx
@@ -35,9 +35,9 @@ import ChecCheckbox from '../../components/ChecCheckbox.vue';
         };
       },
       template: `
-        <div class="py-16 flex justify-center bg-gray-100">
+        <div class="py-16 flex justify-center bg-gray-100 font-lato">
           <ul>
-           <div class="flex justify-center font-lato">Items Checked: {{checked}}</div>
+           <div class="flex justify-center">Items Checked: {{checked}}</div>
             <ChecCheckbox
               class="p-3"
               name="apple"
