update BaseTab, fix cursor, state issues

--- a/src/stories/components/BaseTab.stories.mdx
+++ b/src/stories/components/BaseTab.stories.mdx
@@ -29,7 +29,7 @@ import BaseTab from '../../components/BaseTab.vue';
         }
       },
       template: `
-        <div class="flex justify-center mx-auto max-w-lg py-6 bg-gray-100">
+        <div class="flex justify-center font-lato mx-auto max-w-lg py-6 bg-gray-100">
           <BaseTab
             :disabled="disabled"
             :active="active"
