Add "options menu", wrapping buttons and popovers together
Also fixes some other small bugs:
* Button did not bind its click handler
* font-lato classes were used where they should not have been
* Disabled BaseOption items should have a disabled cursor
* BaseOption text colour was too specific, preventing custom text colour classes from working
* BaseOption did not work without passing an "option" object, now has a default
* Button icons had a margin even when no text label was provided, now does not

--- a/src/stories/components/BaseBreadCrumbs.stories.mdx
+++ b/src/stories/components/BaseBreadCrumbs.stories.mdx
@@ -3,7 +3,7 @@ import { withInfo } from 'storybook-addon-vue-info';
 import BaseBreadcrumbs from '../../components/BaseBreadcrumbs.vue';
 import StoryRouter from 'storybook-vue-router';
 
-<Meta title="Components/BaseBreadcrumbs" component={BaseBreadcrumbs} />
+<Meta title="Components/Breadcrumbs" component={BaseBreadcrumbs} />
 
 # Breadcrumbs
 
