--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -27,7 +27,7 @@ const defaultSelectOptions = [
   { value: 'bread', label: 'Bread' },
 ];
 
-<Meta title="Components/BaseDropdown" component={BaseDropdown} />
+<Meta title="Form fields/Dropdown" component={BaseDropdown} />
 
 # Dropdown
 
