--- a/src/stories/components/BaseTab.stories.mdx
+++ b/src/stories/components/BaseTab.stories.mdx
@@ -3,7 +3,7 @@ import { action } from "@storybook/addon-actions";
 import { text, select, boolean } from '@storybook/addon-knobs';
 import BaseTab from '../../components/BaseTab.vue';
 
-<Meta title="Components/BaseTab" component={BaseTab} />
+<Meta title="Components/Tab" component={BaseTab} />
 
 # Tab
 
