--- a/src/stories/components/ChecCard.stories.mdx
+++ b/src/stories/components/ChecCard.stories.mdx
@@ -20,16 +20,14 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="p-16 flex justify-center w-full bg-gray-100">
           <p>text and stuff</p>
-          <ChecCard
-            class="w-40 h-40"
-          >
+          <ChecCard class="w-40 h-40">
             <p class="self-center mx-auto">Nothing here</p>
           </ChecCard>
         </div>`
     }}
   </Story>
 </Preview>
- 
+
 
 <Preview>
   <Story name="With inner elements">
@@ -39,28 +37,27 @@ import TextField from '../../components/TextField.vue';
         TextField,
       },
       template: `
-        <div class="p-16 flex justify-center w-full">
+        <div class="p-16 flex justify-center w-full font-lato">
           <ChecCard
-            class="w-full max-w-lg h-20 font-lato h-auto"
+            class="w-full max-w-lg"
+            innerClass="bg-gray-100"
           >
-            <div class="bg-gray-100 px-8 py-10 w-full">
-              <span class="block text-lg text-gray-500 font-bold mb-4">
-                Update payment method
-              </span>
-              <!-- flex grid -->
-              <div class="flex -mx-2">
-                <div class="w-1/2 px-2">
-                  <TextField
-                    class="w-full"
-                    placeholder="First Name"
-                  />
-                </div>
-                <div class="w-1/2 px-2">
-                  <TextField
-                    class="w-full"
-                    placeholder="Last Name"
-                  />
-                </div>
+            <span class="block text-lg text-gray-500 font-bold mb-4">
+              Update payment method
+            </span>
+            <!-- flex grid -->
+            <div class="flex -mx-2">
+              <div class="w-1/2 px-2">
+                <TextField
+                  class="w-full"
+                  placeholder="First Name"
+                />
+              </div>
+              <div class="w-1/2 px-2">
+                <TextField
+                  class="w-full"
+                  placeholder="Last Name"
+                />
               </div>
             </div>
           </ChecCard>
