add placeholder for default dropdown

--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -65,6 +65,7 @@ Todo list
             class="max-w-md"
             v-model="option"
             :options="options"
+            placeholder="Example Dropdown Placeholder"
             />
         </div>`
     }}
