--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -34,7 +34,7 @@ Todo list
 ## Basic Stroke Icon
 
 <Preview>
-  <Story name="UI">
+  <Story name="UI icons">
     {{
       components: {
         ChecIcon
