UI icons list > All UI icons
Co-Authored-By: Robbie Averill <robbie@chec.io>

--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -58,7 +58,7 @@ Todo list
 ## Basic Icons List
 
 <Preview>
-  <Story name="UI icons list">
+  <Story name="All UI icons">
     {{
       components: {
         ChecIcon
