--- a/src/stories/components/BaseNotification.stories.mdx
+++ b/src/stories/components/BaseNotification.stories.mdx
@@ -36,11 +36,11 @@ import BaseNotification from '../../components/BaseNotification.vue';
         },
       },
       template: `
-        <div class="mx-auto max-w-lg pt-6">
+        <div class="mx-auto max-w-lg pt-6 font-lato">
           <BaseNotification
             v-if="!closed"
             :variant="variant"
-            @closet="close()"
+            @close="close()"
             :autoHide="false"
           >
             {{text}}
@@ -81,7 +81,7 @@ import BaseNotification from '../../components/BaseNotification.vue';
         }
       },
       template: `
-        <div class="mx-auto max-w-lg pt-6">
+        <div class="mx-auto max-w-lg pt-6 font-lato">
           <BaseNotification
             v-for="variant in variants"
             v-if="!isClosed(variant)"
@@ -123,7 +123,7 @@ import BaseNotification from '../../components/BaseNotification.vue';
         },
       },
       template: `
-        <div class="mx-auto max-w-lg pt-6">
+        <div class="mx-auto max-w-lg pt-6 font-lato">
           <BaseNotification
             v-if="!closed"
             :variant="variant"
@@ -165,7 +165,7 @@ import BaseNotification from '../../components/BaseNotification.vue';
         },
       },
       template: `
-        <div class="mx-auto max-w-lg pt-6">
+        <div class="mx-auto max-w-lg pt-6 font-lato">
           <BaseNotification
             v-if="!closed"
             :variant="variant"
